# agents

3_crew/mydebate/: README.md  pyproject.toml  training_data.pkl
3_crew/mydebate/output/: decide.md  motion.md  oppose.md  propose.md
3_crew/mydebate/src/mydebate/: crew.py  main.py
3_crew/mydebate/src/mydebate/config/: agents.yaml  tasks.yaml
