[project]
name = "mydebate"
version = "0.1.0"
description = "mydebate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
mydebate = "mydebate.main:run"
run_crew = "mydebate.main:run"
train = "mydebate.main:train"
replay = "mydebate.main:replay"
test = "mydebate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
